--- a/Irisha/Layout/MainLayout.razor.css
+++ b/Irisha/Layout/MainLayout.razor.css
@@ -1,14 +1,13 @@
 .page {
-    position: relative;
-    display: flex;
-    flex-direction: column;
+    width: 960px; 
+    margin: 0 auto;
 }
 
 main {
     flex: 1;
 }
 
-.sidebar {
+header {
     background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
 }
 
@@ -36,22 +35,22 @@ main {
         text-overflow: ellipsis;
     }
 
-@media (max-width: 640.98px) {
+@media (max-width: 968px) {
     .top-row {
         justify-content: space-between;
     }
 
-    .top-row ::deep a, .top-row ::deep .btn-link {
-        margin-left: 0;
-    }
+        .top-row ::deep a, .top-row ::deep .btn-link {
+            margin-left: 0;
+        }
 }
 
-@media (min-width: 641px) {
+@media (min-width: 969px) {
     .page {
         flex-direction: row;
     }
 
-    .sidebar {
+    .header {
         width: 250px;
         height: 100vh;
         position: sticky;
@@ -64,11 +63,11 @@ main {
         z-index: 1;
     }
 
-    .top-row.auth ::deep a:first-child {
-        flex: 1;
-        text-align: right;
-        width: 0;
-    }
+        .top-row.auth ::deep a:first-child {
+            flex: 1;
+            text-align: right;
+            width: 0;
+        }
 
     .top-row, article {
         padding-left: 2rem !important;
