--- a/Irisha/Layout/NavMenu.razor.css
+++ b/Irisha/Layout/NavMenu.razor.css
@@ -65,11 +65,12 @@
     color: white;
 }
 
-@media (min-width: 969px) {
+@media (min-width: 769px) {
     .navbar-toggler {
         display: none;
     }
 
+   
     .collapse {
         /* Never collapse the sidebar for wide screens */
         display: block;
@@ -79,5 +80,8 @@
         /* Allow sidebar to scroll for tall menus */
         height: calc(100vh - 3.5rem);
         overflow-y: auto;
+    }
+    .mobile-menu {
+        display: none !important;
     }
 }
