--- a/Irisha/Layout/NavMenu.razor
+++ b/Irisha/Layout/NavMenu.razor
@@ -1,4 +1,5 @@
 ﻿@inject IJSRuntime JS
+@inject HttpClient Http
 
 <div class="navbar navbar-expand-md navbar-dark px-4">
     <div class="container-fluid d-flex align-items-center justify-content-between w-100">
@@ -17,23 +18,38 @@
         <!-- Центр: пункты меню -->
         <div class="main-menu position-absolute start-50 translate-middle-x d-none d-md-block">
             <nav class="navbar-nav flex-row">
-                <NavLink class="nav-link px-2" href="" Match="NavLinkMatch.All">
+                @if (menuItems != null)
+                {
+                    foreach (var item in menuItems)
+                    {
+                        <a class="nav-link" href="@item.Href">@item.Title</a>
+                    }
+                }
+                @* <a class="nav-link px-2" href="/">
                     <span class="bi bi-house-door-fill" aria-hidden="true"></span> Home
-                </NavLink>
-                <NavLink class="nav-link px-2" href="counter">
+                </a>
+                <a class="nav-link px-2" href="counter">
                     <span class="bi bi-plus-square-fill" aria-hidden="true"></span> Counter
-                </NavLink>
-                <NavLink class="nav-link px-2" href="weather">
+                </a>
+                <a class="nav-link px-2" href="weather">
                     <span class="bi bi-list-nested" aria-hidden="true"></span> Weather
-                </NavLink>
+                </a> *@
             </nav>
         </div>
         <!-- Вертикальное меню — для мобильных -->
         <div class="@NavMenuCssClass mobile-menu d-md-none">
             <nav class="navbar-nav flex-column">
-                <NavLink class="nav-link" href="" Match="NavLinkMatch.All" @onclick="CloseMenu">Home</NavLink>
+               @*  <NavLink class="nav-link" href="" Match="NavLinkMatch.All" @onclick="CloseMenu">Home</NavLink>
                 <NavLink class="nav-link" href="counter" @onclick="CloseMenu">Counter</NavLink>
-                <NavLink class="nav-link" href="weather" @onclick="CloseMenu">Weather</NavLink>
+                <NavLink class="nav-link" href="weather" @onclick="CloseMenu">Weather</NavLink> *@
+               
+                @if (menuItems != null)
+                {
+                    foreach (var item in menuItems)
+                    {
+                        <a class="nav-link" href="@item.Href" @onclick="CloseMenu">@item.Title</a>
+                    }
+                }
             </nav>
         </div>
         <!-- Правая часть: пока пустая -->
@@ -60,6 +76,13 @@
             await CheckScreenSizeAsync();
             StateHasChanged();
         }
+    }
+
+    private List<MenuItem>? menuItems;
+
+    protected override async Task OnInitializedAsync()
+    {
+        menuItems = await Http.GetFromJsonAsync<List<MenuItem>>("data/MenuItemsData.json");
     }
 
     [JSInvokable]
