--- a/Irisha/Pages/Home.razor
+++ b/Irisha/Pages/Home.razor
@@ -1,7 +1,25 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
+<section id="home">
+    <HeroSection />
+</section>
 
-<h1>Hello, world!</h1>
+<section id="about">
+    <AboutSection />
+</section>
 
-Welcome to your new app. 3
+<section id="services">
+    <ServicesSection />
+</section>
+
+<section id="gallery">
+    <GallerySection />
+</section>
+
+<section id="contact">
+    <ContactSection />
+</section>
+
+<section id="testimonials">
+    <TestimonialsSection />
+</section>
